Sat Mar  8 07:35:40 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (find_i): yield multiple values instead of a packed
	  array, so that lambda block can work.  with tests by Alex
	  Rothenberg.  [ruby-core:61340] [Bug #9605]

Fri Mar  7 19:29:13 2014  Eric Wong  <e@80x24.org>

	* vm_eval.c (vm_call0_body): use RARRAY_CONST_PTR
	  (check_funcall_exec): ditto
	  [ruby-core:61360]

Fri Mar  7 19:14:11 2014  Eric Wong  <e@80x24.org>

	* vm_eval.c (vm_call0_body): fix RB_GC_GUARD location
	  (check_funcall_exec): ditto
	  [Bug #9609]

Fri Mar  7 14:48:17 2014  Narihiro Nakamura  <authornari@gmail.com>

	* parse.y (ENC_SINGLE): Unused macro removed.

Fri Mar  7 12:06:19 2014  Martin Bosslet  <Martin.Bosslet@gmail.com>

	* test/openssl/test_ssl.rb: Reuse TLS default options from
	  OpenSSL::SSL::SSLContext::DEFAULT_PARAMS.

Thu Mar  6 15:15:24 2014  Zachary Scott  <e@zzak.io>

	* doc/syntax/assignment.rdoc: [DOC] Fix assignment directions
	  By @idupree [Fixes GH-555] https://github.com/ruby/ruby/pull/555

Thu Mar  6 15:07:18 2014  Zachary Scott  <e@zzak.io>

	* doc/syntax/methods.rdoc: [DOC] Fix example for block arguments
	  By @idupree [Fixes GH-554] https://github.com/ruby/ruby/pull/554

Thu Mar  6 10:33:31 2014  Martin Bosslet  <Martin.Bosslet@gmail.com>

	* lib/openssl/ssl.rb: Explicitly whitelist the default
	  SSL/TLS ciphers. Forbid SSLv2 and SSLv3, disable
	  compression by default.
	  Reported by Jeff Hodges.
	  [ruby-core:59829] [Bug #9424]

Wed Mar  5 15:56:18 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (f_arg_asgn): define optional arguments as argument
	  variables in the rhs default expressions.
	  [ruby-core:61299] [Bug #9593]

Wed Mar  5 11:58:30 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl.c (ossl_make_error): check NULL for unknown
	  error reasons with old OpenSSL, and insert a colon iff formatted
	  message is not empty.

Wed Mar  5 00:42:00 2014  Kazuki Tsujimoto  <kazuki@callcc.net>
